 * Campaigns:
   * Northern Rebirth:
     * In Showdown, you recover full gold only if Sisal survived the previous
       scenario.
 * Language and i18n:
   * Updated translations:
 * Miscellaneous and bug fixes:
   * Defaulted log level to warning again
   * Removed the unused gui2 menu bar
   * Added a window register framework
   * Enabled the --new-widgets MP create dialog again

Version 1.8.0:
 * AI:
   * Fixed bug #14247: Make formula AI behave correctly if the side has only 1
     potential recruit.
   * Added support for candidate actions written in lua.
 * Campaigns:
   * Descent into Darkness:
     * Added new Giant Rat base frame and animations.
   * Legend of Wesmere:
     * Fixed bug #15631: Scenario 3: arrival of Kalenz failed
     * Fixed bug #15679: Scenario 17: leader of side 2 is missing
     * Fixed bug #15680: Scenario 18: wrong recruitment options
   * Under the Burning Suns:
     * Scenario 2: speed up AI turn.
 * Graphics:
   * Added new Cave Spider and Cuttle Fish graphics
 * Language and i18n:
   * Added new translations: Serbian Ijekavian, Serbian Ijekavian Latin
   * Updated translations: Czech, Finnish, French, German, Hungarian, Japanese,
     Latvian, Lithuanian, Russian, Serbian, Spanish, Slovak
 * Multiplayer:
   * Updated maps: Cynsaun Battlefield
 * Music and sound effects:
   * Fixed bug #15668: The lobby will play a random music playlist, configured
     by [lobby_music], instead of looping the main menu song
   * Fixed bug #15669: The titlescreen will play a random music playlist,
     configured by [titlescreen_music], instead of looping the main menu song
     First song played will still always be the main_menu theme.
 * User interface:
   * Worked around bug #15561: Resizing the lobby made the items in the game
     listbox too small
 * Miscellaneous and bug fixes:
   * Added the first draft of the gui2 design documentation
   * Defaulted log level to error again