@@ -188,16 +188,16 @@
 								[/row]
 							[/grid]
 						{VERTICAL_END}
-#					{HORIZONTAL_SEP}
-#						horizontal_alignment = "right"
-#						[grid]
-#							[row]
-#								{GAMELISTBOX_BODY_BUTTON "join" "Join"}
-#							[/row]
-#							[row]
-#								{GAMELISTBOX_BODY_BUTTON "observe" "Observe"}
-#							[/row]
-#						[/grid]
+					{HORIZONTAL_SEP}
+						horizontal_alignment = "right"
+						[grid]
+							[row]
+								{GAMELISTBOX_BODY_BUTTON "join" "Join"}
+							[/row]
+							[row]
+								{GAMELISTBOX_BODY_BUTTON "observe" "Observe"}
+							[/row]
+						[/grid]
 					{HORIZONTAL_END}
 				[/toggle_panel]
 			[/column]
